added custom notification

--- a/addProduct.html
+++ b/addProduct.html
@@ -171,7 +171,8 @@
         </div>
       </div>
     </section>
-    
+       <div class="toast"></div>
+
     <script src="script/addProduct.js"></script>
     <!-- <script src="app.css"></script> -->
   </body>
