--- a/index.html
+++ b/index.html
@@ -103,20 +103,20 @@
           </div>
           <div class="box">
             <div class="right-side">
-              <div class="box-topic">Items in stock</div>
-              <div class="number">5</div>
+              <div class="box-topic">Total Quantity</div>
+              <div class="number"></div>
             </div>
           </div>
           <div class="box">
             <div class="right-side">
-              <div class="box-topic">Almost finished</div>
-              <div class="number">1</div>
+              <div class="box-topic">Items in stock</div>
+              <div class="number"></div>
             </div>
           </div>
           <div class="box">
             <div class="right-side">
               <div class="box-topic">out of stock</div>
-              <div class="number">2</div>
+              <div class="number"></div>
             </div>
           </div>
         </div>
@@ -136,6 +136,7 @@
         </div>
       </div>
     </section>
+    <div class="toast"></div>
     <!-- <script src="index.js"></script> -->
     <!-- <script src="script.js"></script> -->
     <script src="script/dash.js"></script>
