--- a/edit.html
+++ b/edit.html
@@ -158,6 +158,10 @@
         </div>
       </div>
     </section>
+    <div class="notification">
+      <div class="toast"></div>
+
+    </div>
     <!-- <script src="index.js"></script> -->
     <script src="script/edit.js"></script>
   </body>
