Added validations to update product page

--- a/addProduct.html
+++ b/addProduct.html
@@ -86,7 +86,7 @@
         </div> -->
         <div>
           <form class="inventory-inputs" >
-            
+            <h3 class="item-header">Add item to stock</h3>
             <div class="flex">
               <label for="username">Name</label>
               <input
