--- a/edit.html
+++ b/edit.html
@@ -94,7 +94,7 @@
               <label class="id-label" for="username">Enter Product ID Here</label>
               <input
                 class="form__field"
-                type="text"
+                type="number"
                 name="prodId"
                 placeholder=""
                 required
