--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             <label class="id-label" for="username">Enter Product ID Here</label>
             <input
               class="form-stylin text-field"
-              type="text"
+              type="number"
               name="ProdId"
               placeholder="Enter the item ID eg.1"
+              required
             />
           </div>
           <div class="flexx">
@@ -38,6 +39,7 @@
               type="text"
               name="Product Name"
               placeholder=""
+              required
             />
           </div>
           <div class="flexx">
@@ -47,6 +49,7 @@
               type="text"
               name="quantity"
               placeholder=""
+              required
             />
           </div>
           <div class="submit-divv">
@@ -57,7 +60,6 @@
       </div>
     </div>
 
-    <!-- ---------------------------------------------------------- -->
     <div class="sidebar">
       <div class="logo-details">
         <i class="bx bxl-c-plus-plus"></i>
