--- a/addProduct.html
+++ b/addProduct.html
@@ -59,13 +59,13 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="index.html" class="active">
+          <a href="index.html" >
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#" class="active">
             <i class="bx bx-box"></i>
             <span class="links_name">Add Product</span>
           </a>
