--- a/edit.html
+++ b/edit.html
@@ -59,7 +59,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="index.html" class="active">
+          <a href="index.html" >
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
@@ -71,13 +71,13 @@
           </a>
         </li>
         <li class="quantity-update">
-          <a href="#">
+          <a href="#" >
             <i class="bx bx-list-ul"></i>
             <span class="links_name">Update Quantity</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#"class="active">
             <i class="bx bx-pie-chart-alt-2"></i>
             <span class="links_name">Update Details</span>
           </a>
